# rowan

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  ChangeLog.md  ChangeLog.rst  ContributorAgreement.md  Credits.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  __init__.py  contributors.txt  gen_test_arrays.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml  oldest-test-reqs.txt
.github/: dependabot.yml
.github/workflows/: release.yaml  requirements-build.txt  requirements-test-3.10.txt  requirements-test.in  requirements-test.txt  requirements3.10.txt  requirements3.11.txt  requirements3.12.txt  requirements3.13.txt  requirements3.9.txt  style.yaml  unit_test.yaml  update-uv-lockfiles.yaml
.github/workflows/environments/: requirements-build.txt  requirements-doc.txt  requirements-test-3.10.txt  requirements-test-3.11.txt  requirements-test-3.12.txt  requirements-test-3.13.txt  requirements-test-3.9.txt  requirements-test.in  update-lockfiles.sh
benchmarks/: Benchmarks.ipynb  Benchmarks.py
doc/: Makefile  changelog.rst  conf.py  credits.rst  development.rst  index.rst  license.rst  make.bat  overview.rst  package-calculus.rst  package-geometry.rst  package-hamilton.rst  package-interpolate.rst  package-mapping.rst  package-random.rst  package-rowan.rst
hamilton/: __init__.py  _functions.py  functions.py  quaternion.py
hamilton/geometry/: __init__.py
hamilton/interpolation/: __init__.py
hamilton/map/: __init__.py
hamilton/random/: __init__.py
misc/: Euler.nb
paper/: paper.bib  paper.md
quaternion/: __init__.py
requirements/: oldest.txt  requirements-minimal.txt  requirements-oldest.txt  requirements-testing.txt
rowan/: __init__.py  functions.py
rowan/calculus/: __init__.py
rowan/geometry/: __init__.py
rowan/grids/: __init__.py
rowan/interpolate/: __init__.py
rowan/mapping/: __init__.py  symmetries.py
rowan/random/: __init__.py
tests/: test_about_axis.py  test_axis_angle.py  test_calculus.py  test_distance.py  test_docstrings.py  test_euler.py  test_exp.py  test_interpolate.py  test_mapping.py  test_matrix.py  test_multiply.py  test_random.py  test_reflect.py  test_rotate.py  test_simple.py  test_vector_vector.py
tests/files/: test_arrays.npz  test_exp.npz  test_geometry.npz  test_log.npz  test_quaternions.npz
