[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rowan"
version = "1.3.0"
description = "Perform quaternion operations using NumPy arrays"
readme = "README.rst"
license = { file = "LICENSE.txt" }
requires-python = ">=3.8, <4"
authors = [
    { name = "Vyas Ramasubramani", email = "vramasub@umich.edu" },
]
classifiers = [
    "Development Status :: 6 - Mature",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
mapping = [
    "scipy>=1.7",
]

[project.urls]
Homepage = "https://github.com/glotzerlab/rowan"

[tool.setuptools.packages.find]
include = ["rowan*"]
namespaces = false

[tool.ruff.lint]
select = ["E", "W", "F", "C", "I", "D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"
